app/renderer/Tasks/TasksWindow.scss
& {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.TasksTable {
    overflow-y: scroll;
    flex-grow: 1;
}

& {
    .TRow {
        display: grid;
        grid-template-columns: 22px 22px 22px 22px 38px 73px 1fr 63px 22px;
        grid-template-rows: auto;

        &.--header {
            padding: 1px 0 3px 0;

            .TCol {
                font-weight: bold;
            }
        }

        .TCol {
            padding: 1px 3px;

            &.--code {
                white-space: nowrap;
            }
            &.--time {
                color: #364abc;
            }
            &.--selected,
            &.--distributed,
            &.--chargeable,
            &.--frozen {
                align-self: center;
                text-align: center;
            }
            &.--timespan {
                align-self: center;

                .--timespan-charge {
                    opacity: 0.5;
                }
            }
            &.--title {
                .Note--Content,
                .Title--Content {
                    display: block;
                }
            }
            &.--timespan {
                span {
                    display: block;
                }
            }
            &.--playback {
                align-self: center;

                .IconAsInput {
                    display: none;
                }
            }
        }

        &.selected {
            background-color: #f0f0f0 !important;
        }

        &.timered {
            color: green;

            .TCol.--code,
            .TCol.--title,
            .TCol.--timespan {
                font-weight: bold;
            }
        }

        &.notchargeable,
        &.distributed {
            opacity: 0.4;
        }

        &:hover {
            background-color: #f5f5f5;

            .TCol.--playback .IconAsInput {
                display: block;
            }
        }
    }

    .TasksTable { // not header
        .TCol.--code,
        .TCol.--title,
        .TCol.--timespan {
            cursor: pointer;
        }
    }

    .TRowDate {
        display: grid;
        grid-template-columns: 22px 22px 1fr 114px 63px 22px;
        grid-template-rows: auto;

        padding: 2px 0px;
        color: #364abc;

        .TCol {
            padding: 1px 3px;

            &.--group-date {
                position: relative;

                &:after {
                    position: absolute;
                    content: "";
                    display: block;
                    height: 1px;
                    width: 67%;
                    background: #b8c1f1;
                    top: 9px;
                    right: 5px;
                }
            }
            &.--timespan-charge {
                .original-time {
                    opacity: 0.5;
                }
            }
            &.--timespan-spent {
                opacity: 0.5;
            }
        }
    }
}

.SelectionStatistics {
    background: white;
    padding: 4px 6px;
    border-top: 1px solid grey;
    border-radius: 3px;
}

[class*=" icofont-"],
[class^=icofont-] {
    font-size: 17px;
}

.TRow.logged {
    .TCol {
        color: darkgrey !important;
    }
}

.TRow {
    .IconAsInput {
        opacity: 0.1;
        cursor: pointer;

        &.active {
            opacity: 1 !important;
        }
    }
}

.TRow:hover {
    .IconAsInput {
        opacity: 0.3;

        &:hover {
            opacity: 0.5;
        }
    }
}

.Timeline {
    height: 52px;
    overflow-x: scroll;
    flex-shrink: 0;
}

.TimelineItems {
    width: auto;
    height: 40px;
    display: flex;
    padding: 3px;

    > div {
        height: 40px;
    }

    &:hover {
        > div {
            flex-shrink: 0;
        }
    }
}

.ellipsis {
    position: relative;
}

.ellipsis:before {
    content: 'X';
    visibility: hidden;
}

.ellipsis span {
    position: absolute;
    left: 0;
    right: 0;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

